@@ -1,6 +1,8 @@
 AUX coolio-1.1.0-libev.patch 845 SHA256 ddad9437fa1a3f499a5d61a7bf0f94a7ae89944dda1f6b10073665a5981bd25b SHA512 456dafe87e308f581cda462d1a7e396097d53056df00fdbf5a51c2e30b8ca1e438c8ad5c4b5c7825815a97eec585ad1603dd0f3f9339b7f27eece6cff456ac6e WHIRLPOOL 20d7a25d2c0a06b509a65698060a525dbd2b8bac893c70eccece0087bb76635d10b9416972b5d6d7cd95895c441bd9fbb2f31447cc93990bcd6328ddcac1be9e
 AUX coolio-1.1.0-rubyio.patch 661 SHA256 330e74ae071f25c63519fd33ffe5372049759da42f827cecc929ea33e59637ab SHA512 d80350d1f3dd5b09ed2561bf694f50a3e4761be3cded5305568c1423d439bffd1898b08677f5fb1532250b3b7a5cd92efd4648e4c2fd867dd2635f5d4f3e2a98 WHIRLPOOL a4d420ebae398b1202eb8fe83b0161418247e9392ba9acde51dd2d6559bc5c9df7ada73b4b431a981b5f77bf5ea781bbcfb725c9d1605553aa44eee160c3dcbc
 DIST cool.io-1.2.0.gem 109568 SHA256 8503707c33a4f072334ce27b8f30573fc98cf775ae46dc53d54ca1fa969ed5af SHA512 e1b96a6136e733ed85702458c36e0e0d9de95f347ec8267d5fa4115c79bdc3d7deae0c347767d201b49f8de297d3f355236f3ef1d42f9d9dbc1094851ada69d8 WHIRLPOOL 32cd4419171cc4be1c1085c0082ae9779b20dd3fcc945d42720a6435084a30c1e0601b7f325909d1e848d690ad4885c7570f5069cd0e4f8b3202b4f44d732431
+DIST cool.io-1.2.1.gem 112128 SHA256 2ed7857bb7ec5c53e683a05db07798f0adbaaef35a960d9e0addfacc1fe6b684 SHA512 778605986fb33b1370d780cc986921b09dea2a4e54464753042b83c18d5a18d61f83920050bcc1f2452354d3965bbd0be26f56fafc4ec4700772e8350da33ccb WHIRLPOOL 57dfd569f7a4786e546a67a0b89a1335358f3f1621f265f554647636406218e6d95f0c4d85e498f38c9827c186d524487002d0a57fc8444caf931bd18691d01f
 EBUILD coolio-1.2.0-r1.ebuild 1424 SHA256 959974e10d85eaccac43b3c43ce9af10f9f3ea3d364c35efc334b020387a6158 SHA512 deead012fba0f1621e8838a840aca3ee4e98de95a68a53f153ed8520d19d871049dda75f6a6bca25fdc75b0de01033709d332ce2e0c2147d6225c4b3493b5204 WHIRLPOOL 6d92de390f66605983cf931284944fc894cd3ac8dfc32f55cea47b39399323fa1ff08bf8261458fbe8392670bcef38b01141207f8a0e0cd2bdf7ae0b8ab56d09
-MISC ChangeLog 1324 SHA256 72c2a3fb59daa7ed3d497c0722803a24db427d41c895ee589bc4cfcedb157974 SHA512 567fd15e6f506ff48e3f4ad0afc179b5fd42631e99d5b6f713470aeb157659f54e7e3a5e69a57d6f8365717f9fa1c1a3cd92bf05d74df56ad8285031c8b236b7 WHIRLPOOL 51e3b26786e9917b234414fbe637b21c7390336f507599d0dcb5f58b57ef001df1f5bfff442e5dbf67cb6d9fba1fa07720440b1ee2e15228d79e5a7b2f51a3b9
+EBUILD coolio-1.2.1.ebuild 1464 SHA256 37089115e3bd1cbf08a90ae2af7845fbb6f83dc8694538c2a19c08f8858ae74d SHA512 36b91063d059bcf5bf3ac5500ccd3625e7b7f2836d7839ce9b33db4efe9d34448be4baa9c1e86990b37a0b1b704460253caa2c7990bd0467fe94f5ee5a0fdece WHIRLPOOL f087354c8802841d480558e2b36e6fe2f3182fd7b035caaa5c77c5d28cea6069de54f1d26e0ddda1540182e1e47dce031349806b792015199a92c090d34f6535
+MISC ChangeLog 1440 SHA256 b0f3ef8d2b99b64b26a5b98856172c5c97f10026ac113107842706ecbe005b58 SHA512 3c97a605948ccc5c050430f2362f290d02c2bb726e7d5f3e94e045888caa19e207d695a57103efb9d15bbd97677a9a208bdae1f7787382ab0c17fa8fe81b453f WHIRLPOOL 95f7d5bc9ebc9847bcbfad137c9c036ee36625047b5d84b29c0111ffce19093162e7db982bc276e5531e55ae265f903da651d67ac6992625f43d15fd6d2a4d2d
 MISC metadata.xml 158 SHA256 cb912d1f997e9e0c5122d4a02de6e3fa5bb4d91fc1eb5a5ca616becca5db2a7a SHA512 9032da465411436fc83b6e6667030e4fc9d0f28e743286af88407d46a331b5ce5f6ffd55d8ac5b49390a964d915af79743aeb0edd10fc9e72e30dc00b40abe3b WHIRLPOOL ed69120b1be86fbda44122a32c1f1bc69fb4ad6f56aede11046cd19d278304f5cc76f60aabf89fea24b3f1246b9c54eca199ddc50c1a93f10b50a5ed6d1d58cb
