@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/coolio
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coolio/ChangeLog,v 1.7 2013/11/05 00:56:41 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/coolio/ChangeLog,v 1.8 2014/02/23 16:05:16 mrueg Exp $
+
+*coolio-1.2.1 (23 Feb 2014)
+
+  23 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +coolio-1.2.1.ebuild:
+  Version bump.
 
 *coolio-1.2.0-r1 (05 Nov 2013)
 
